syntax = "proto3";

package pl.services;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "src/common/uuid/proto/uuid.proto";
import "src/shared/cvmsgspb/cvmsgs.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "pixielabs.ai/pixielabs/src/cloud/vzmgr/vzmgrpb;vzmgrpb";

service VZMgrService {
  rpc CreateVizierCluster(CreateVizierClusterRequest) returns (uuidpb.UUID) {}
  rpc GetViziersByOrg(uuidpb.UUID) returns (GetViziersByOrgResponse) {}
  rpc GetVizierInfo(uuidpb.UUID) returns (cvmsgspb.VizierInfo) {}
  rpc GetViziersByShard(GetViziersByShardRequest) returns (GetViziersByShardResponse) {}
  rpc GetVizierConnectionInfo(uuidpb.UUID) returns (cvmsgspb.VizierConnectionInfo) {}
  // Call to acknowledge connection of a vizier.
  rpc VizierConnected(cvmsgspb.RegisterVizierRequest) returns (cvmsgspb.RegisterVizierAck) {}
  rpc UpdateVizierConfig(cvmsgspb.UpdateVizierConfigRequest) returns (cvmsgspb.UpdateVizierConfigResponse) {}
  // This call is made when we want to update or install a Vizier.
  rpc UpdateOrInstallVizier(cvmsgspb.UpdateOrInstallVizierRequest) returns (cvmsgspb.UpdateOrInstallVizierResponse) {}
}

message CreateVizierClusterRequest {
  uuidpb.UUID org_id = 1 [
                          (gogoproto.customname) = "OrgID"
                         ];
  string project_name = 2;
}

message GetViziersByOrgResponse {
  repeated uuidpb.UUID vizier_ids = 1 [
                                       (gogoproto.customname) = "VizierIDs"
                                      ];
}
message GetViziersByShardRequest {
    string shard_id = 1 [
                        (gogoproto.customname) = "ShardID"
                        ];
}

// GetViziersByShardResponse, get a information about all connected viziers in a shard.
message GetViziersByShardResponse {
    message VizierInfo {
        uuidpb.UUID vizier_id = 1 [
                                  (gogoproto.customname) = "VizierID"
                                  ];
        uuidpb.UUID org_id = 2 [
                               (gogoproto.customname) = "OrgID"
                               ];
    }
    repeated VizierInfo viziers = 1;
}



//////////////////////////////////////////////////////////////
// Deployment Key Service
//////////////////////////////////////////////////////////////

// The service that handles deployment keys. This is a user facing service.
service VZDeploymentKeyService {
    // Create a new deployment key.
    rpc Create(CreateDeploymentKeyRequest) returns (DeploymentKey) {}
    // List all keys for the user/org.
    // TODO(zasgar): Update when we have RBAC.
    rpc List(ListDeploymentKeyRequest) returns(ListDeploymentKeyResponse) {}
    // Get the key specified by ID.
    rpc Get(GetDeploymentKeyRequest) returns (GetDeploymentKeyResponse) {}
    // Delete the Key specified by ID.
    rpc Delete(uuidpb.UUID) returns (google.protobuf.Empty) {}
}

// A key that can be used to deploy a new vizier cluster. This is value of the key
// is added to the X-API-KEY requests from Vizier on cloud conn.
message DeploymentKey {
    // They ID of the key.
    uuidpb.UUID id = 1  [
                        (gogoproto.customname) = "ID"
                        ];
    // The value of the key.
    string key = 2;
    google.protobuf.Timestamp created_at = 3;
}

// Create a deployment key.
message CreateDeploymentKeyRequest {
    // Empty message on purpose so we can extend with attributes easily if needed.
}

message ListDeploymentKeyRequest {
    // Empty message on purpose so we can extend with attributes easily if needed.
}

message ListDeploymentKeyResponse {
    repeated DeploymentKey keys = 1;
}

message GetDeploymentKeyRequest {
    uuidpb.UUID id = 1  [
                        (gogoproto.customname) = "ID"
                        ];
}

message GetDeploymentKeyResponse {
    DeploymentKey key = 1;
}
